# openrw-editor

./: CMakeLists.txt  LICENSE  README.md  TECHNICAL_DOCUMENTATION.md  build.sh  openrw_editor_architecture.md  test_build.py
src/: entity_system.cpp  entity_system.h  main.cpp  scene_manager.cpp  scene_manager.h
src/common/: math_utils.h  types.h
src/file_formats/: dat_parser.cpp  dat_parser.h  dff_parser.cpp  dff_parser.h  ide_parser.cpp  ide_parser.h  ipl_parser.cpp  ipl_parser.h  txd_parser.cpp  txd_parser.h
src/mission/: mission_editor.h  mission_node.cpp  mission_node.h
src/ui/: asset_browser.h  main_window.h  property_inspector.cpp  property_inspector.h  world_outliner.h
src/viewport/: camera_controller.cpp  camera_controller.h  viewport_widget.cpp  viewport_widget.h
